# bedrock-forge

./: .dockerignore  .env.deploy.example  .env.example  .env.local.example  .env.production.example  .gitignore  .npmrc  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_PLAN.md  Dockerfile  Dockerfile.dashboard  Dockerfile.nest  LICENSE  MISSING_FEATURES_ANALYSIS.md  Makefile  PLAN.markdown  PROJECT.md  README.md  create-site.sh  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  doctor.sh  entrypoint.sh  file.md  forge-deploy  forge.db  init.sql  install.sh  missing.md  newplan.md  package.json  pnpm-lock.yaml  prisma.config.js  project-info.json  pyproject.toml  (+12 more)
.clinerules/: config.json
.ddev/: config.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
api/: README.md  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
config/: sync-config.json
core/: .env.example  Dockerfile  docker-compose-db.yml
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
deploy/: .env.production  .gitkeep  DEPLOYMENT.md  Dockerfile.api  Dockerfile.dashboard  docker-compose.dev.yml  docker-compose.yml  entrypoint-api.sh  nginx-dashboard.conf  nginx.conf
docs/: API.md  ARCHITECTURE.md  BACKUP_GUIDE.md  BILLING.md  CHANGELOG.md  CI_CD_GUIDE.md  CLIENT_PORTAL.md  CLI_TESTING_CHECKLIST.md  COMMANDS.md  CONFIGURATION.md  CYBERPANEL.md  DASHBOARD_ROADMAP.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_QUICKSTART.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  MONITORING_ALERTS.md  PLUGIN_POLICY.md  PLUGIN_SYSTEM.md  PROJECT_MANAGEMENT_PLAN.md  PROJECT_STRUCTURE.md  PROVIDER_GUIDE.md  QUICK_START.md  REFACTOR_CHECKLIST.md  SERVICE_BOUNDARIES.md  TESTING.md  TROUBLESHOOTING.md  cloudflare.md  concepts.md  configuration.md  deployment.md  example-workflow.md  github-actions.md  hcloud.md  local-development.md  migration.md  (+5 more)
forge/: api_server.py  constants.py  debug_backup.py  main.py  pyproject.toml  requirements.txt  seed_user.py  verify_notifications.py
frontend/: .env.example  .gitignore  index.html  tailwind.config.js
nest-api/: .env.example  package-lock.json  package.json  tsconfig.spec.json
nginx/: default.conf
prisma/: schema.prisma  seed.js  seed.ts
scripts/: .env.provision.example  backfill_monitors_domains.py  compose-safe.sh  debug_db.py  dev-setup.sh  forge-doctor  inspect_enums.py  local-docker-smoke.sh  manage-site.sh  provision-cyberpanel-bedrock.sh  reseed.py  run_api.sh  show-project-info.sh  sync-config.sample.json  uninstall-forge  update-forge
tasks/: backend_full_stabilization_2026-03-03_11-40.md  backend_isolation_phase1_onboarding_2026-03-12_11-06.md  backend_isolation_phase1b_sync_rsync_2026-03-12_11-16.md  backend_isolation_phase1c_backup_runner_observability_2026-03-12_11-23.md  backend_isolation_phase1d_domains_invoices_ownership_2026-03-12_11-40.md  backend_isolation_phase1e_ssl_subscriptions_ownership_2026-03-12_11-45.md  backend_isolation_phase1f_owner_integrity_2026-03-12_12-10.md  background_runners_p0_implementation_2026-03-03_13-14.md  background_runners_p1_monitoring_domains_2026-03-03_14-34.md  background_runners_p2_ssl_subscriptions_invoices_sync_2026-03-03_14-48.md  background_runners_p3_housekeeping_2026-03-04_10-35.md  background_runners_p4_backup_retention_2026-03-04_11-19.md  background_runners_p5_backup_artifact_cleanup_2026-03-04_13-21.md  background_runners_p6_backup_observability_2026-03-04_14-20.md  background_runners_p7_runner_observability_2026-03-05_10-19.md  backup_bedrock_wpcli_path_fix_2026-03-15_11-00.md  backup_credential_scanner_frontend_cleanup_2026-03-14_10-00.md  backup_drive_stability_shared_search_2026-03-08_09-05.md  backup_full_stabilization_2026-03-14_09-00.md  backup_isolation_persisted_runtime_rewrite_2026-03-12_14-25.md  backup_realtime_shared_folder_id_2026-03-08_00-00.md  backup_remote_dump_runtime_hardening_2026-03-10_16-20.md  backup_scheduler_ssh_first_rebuild_2026-03-11_11-04.md  backup_staging_pending_runner_2026-03-07_10-36.md  backup_type_db_inclusion_and_drive_append_2026-03-08_13-20.md  (+35 more)
(+2722 files in other folders)
